ZumZumFinancials_Dev1/src/objects/CustomerLookup__c.object
<CustomObject>
    <fields>
        <fullName>CustomerAccount__c</fullName>
        <label>CustomerAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CustomerLookup</relationshipLabel>
        <relationshipName>CustomerLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nominal_Account__c</fullName>
        <label>Nominal Account</label>
        <referenceTo>Nominal_Account__c</referenceTo>
        <relationshipLabel>CustomerLookup</relationshipLabel>
        <relationshipName>CustomerLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SupplierAccount__c</fullName>
        <label>SupplierAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CustomerLookup (AccountSupplier)</relationshipLabel>
        <relationshipName>CustomerLookup1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax_Rate</label>
        <referenceTo>Tax_Rate__c</referenceTo>
        <relationshipLabel>CustomerLookup</relationshipLabel>
        <relationshipName>CustomerLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CustomerLookup</label>
    <nameField>
        <label>CustomerLookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomerLookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>